--- a/MagicCube/res/layout/main.xml
+++ b/MagicCube/res/layout/main.xml
@@ -1,41 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <Button
-        android:id="@+id/aMove1"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="翻转" />
+    <com.wander.cube.activity.Preview
+        android:id="@+id/preview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
+    </com.wander.cube.activity.Preview>
 
     <Button
-        android:id="@+id/aMove2"
+        android:id="@+id/scan"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="旋转某面" />
+        android:text="@string/scan" />
 
-    <Button
-        android:id="@+id/bMove"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="旋转底座" />
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-
-        <com.wander.cube.activity.Preview
-            android:id="@+id/preview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-        </com.wander.cube.activity.Preview>
-
-        <Button
-            android:id="@+id/scan"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/scan" />
-    </FrameLayout>
-
-
-</LinearLayout>
+</FrameLayout>
