--- a/MagicCube/res/layout/main.xml
+++ b/MagicCube/res/layout/main.xml
@@ -1,18 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-
-    <com.wander.cube.activity.Preview
-        android:id="@+id/preview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
-    </com.wander.cube.activity.Preview>
+    android:layout_height="match_parent" 
+    android:orientation="vertical">
 
     <Button
-        android:id="@+id/scan"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/scan" />
+        android:text="HELLO" />
 
-</FrameLayout>
+    <FrameLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+        <com.wander.cube.activity.Preview
+            android:id="@+id/preview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+        </com.wander.cube.activity.Preview>
+
+        <Button
+            android:id="@+id/scan"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/scan" />
+    </FrameLayout>
+
+</LinearLayout>
